--- a/flask_parody/templates/base.html
+++ b/flask_parody/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-	<title>STOP THE NOT TORIES</title>
+	<title># NOTTACTICAL2017</title>
 	<link rel=stylesheet type=text/css href=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/css/bootstrap-select.min.css">
 	<link rel=stylesheet type=text/css href={{url_for('static', filename='style.css')}}>
@@ -10,7 +10,7 @@
 
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">STOP THE NOT TORIES</a>
+				<a class="navbar-brand" href="#"># NOTTACTICAL2017</a>
 			</div>
 		</div>
 	</nav>
