--- a/flask_parody/static/style.css
+++ b/flask_parody/static/style.css
@@ -52,10 +52,12 @@ h2 {
 	font-size: 51px;
 	margin: 48px 48px;
 }
+
 h3 {
 	font-size: 20px;
 	margin: 10px 94px;
 }
+
 p {
 	font-size: 17px;
 	color: white;
@@ -89,6 +91,10 @@ body {
 	max-width: 800px;
 }
 
+.about p{
+	margin: 6px 48px;
+}
+
 @media screen and (max-width: 768px) {
 	h1{
 		margin: 10px 10px;
@@ -104,7 +110,17 @@ body {
 	p {
 		font-size:13px;
 	}
+	.about p {
+		margin: 6px 24px;
+	}
 }
 
+.about {
+	text-align: left;
+}
 
+.postcode {
+	margin: 25px 0px;
+	padding: 0 94px 0 94px;
+}
 
