--- a/flask_parody/templates/base.html
+++ b/flask_parody/templates/base.html
@@ -10,7 +10,14 @@
 
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#"># NOTTACTICAL2017</a>
+				<a class="navbar-brand" href="/"># NOTTACTICAL2017</a>
+			</div>
+			<div class="collapse navbar-collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li>
+						<a href="/about">About</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</nav>
