--- a/flask_parody/templates/about.html
+++ b/flask_parody/templates/about.html
@@ -6,6 +6,7 @@
 	<p>Okay, okay. No. That's enough.</p>
 	<p>This is just a little parody about <a href=https://tactical2017.com>tactical2017</a></p>
 	<p>Obvously satirical, and shouldn't be taken seriously. I don't really think that Corbyn is actually a commie or that McDonnell is going to sieze the means of production. Okay, maybe I do a little. Just a little.</p>
+	<p>Made by <a href=https://reddit.com/u/jakegt1>u/jakegt1/</a> on reddit (Shoutout to the lads at <a href=https://reddit.com/r/ukpolitics>r/ukpolitics</a>)</p>
 
 </div>
 {% endblock %}
