--- a/flask_parody/static/style.css
+++ b/flask_parody/static/style.css
@@ -37,7 +37,6 @@
 }
 
 h1, h2, h3, h4 {
-	color: white;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 900;
 }
@@ -60,7 +59,6 @@ h3 {
 
 p {
 	font-size: 17px;
-	color: white;
 	margin: 0px 94px;
 }
 
@@ -88,6 +86,7 @@ body {
 
 .tuitionfees {
 	background: #FDBB30;
+	color: #444444;
 }
 
 .ukeep {
